--- a/src/app/Views/mainbody/mainbody.component.html
+++ b/src/app/Views/mainbody/mainbody.component.html
@@ -1,3 +1,12 @@
-<section class="mat-typography">
-  <h1>Testing Testing Testing</h1>
-</section>
+<div class="content">
+  <div class="content__container">
+    <p class="content__container__text">Hello</p>
+
+    <ul class="content__container__list">
+      <li class="content__container__list__item">World !</li>
+      <li class="content__container__list__item">Mrigs !</li>
+      <li class="content__container__list__item">Users !</li>
+      <li class="content__container__list__item">Everybody !</li>
+    </ul>
+  </div>
+</div>
