--- a/src/app/Views/navbar/navbar.component.html
+++ b/src/app/Views/navbar/navbar.component.html
@@ -1,5 +1,7 @@
-<p>
-  <mat-toolbar color="primary">
-    <span>Mriganka Application</span>
-  </mat-toolbar>
-</p>
+<mat-toolbar class="navbar">
+  <button mat-button>Home</button>
+  <span class="example-spacer"></span>
+  <button mat-button>About</button>
+  <button mat-button>Contact</button>
+  <button mat-button>Social</button>
+</mat-toolbar>
