Welcome Screen :rocket:

--- a/src/app/Views/navbar/navbar.component.scss
+++ b/src/app/Views/navbar/navbar.component.scss
@@ -4,8 +4,7 @@
 .navbar {
   background: transparent;
 }
-img {
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
+button {
+  color: white;
+  border: 1rem;
 }
