--- a/src/app/Views/mainbody/mainbody.component.html
+++ b/src/app/Views/mainbody/mainbody.component.html
@@ -1,12 +1,8 @@
-<div class="content">
-  <div class="content__container">
-    <p class="content__container__text">Hello</p>
-
-    <ul class="content__container__list">
-      <li class="content__container__list__item">World !</li>
-      <li class="content__container__list__item">Mrigs !</li>
-      <li class="content__container__list__item">Users !</li>
-      <li class="content__container__list__item">Everybody !</li>
-    </ul>
+<div class="container">
+  <div class="box">
+    <div class="title">
+      <span class="block"></span>
+      <h1>Welcome<span></span></h1>
+    </div>
   </div>
 </div>
