--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,8 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-color: #000000;
+  background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
