--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: #000000;
-  background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
+  background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
