--- a/src/app/Views/home/home.component.html
+++ b/src/app/Views/home/home.component.html
@@ -5,8 +5,11 @@
 <br />
 <button mat-raised-button (click)="DisplayDetails()">Details</button>
 
-<div *ngIf="displayconponent">
-  <span class="spanheader">Technical Skills</span>
+<div *ngIf="displaycomponent">
+  <span class="spanheader">
+    <mat-icon aria-hidden="false" aria-label="Example home icon">keyboard</mat-icon>
+    Skills
+  </span>
   <div class="cardgroup">
     <mat-card class="my-card">
       <mat-card-header>
@@ -57,4 +60,37 @@
       </mat-card-content>
     </mat-card>
   </div>
+  <span class="spanheader">
+    <mat-icon aria-hidden="false" aria-label="Example home icon">book</mat-icon>
+    Education
+  </span>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="examination">
+      <th mat-header-cell *matHeaderCellDef> Examination </th>
+      <td mat-cell *matCellDef="let element"> {{element.examination}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="school">
+      <th mat-header-cell *matHeaderCellDef> School </th>
+      <td mat-cell *matCellDef="let element"> {{element.school}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="board">
+      <th mat-header-cell *matHeaderCellDef> Board </th>
+      <td mat-cell *matCellDef="let element"> {{element.board}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="year">
+      <th mat-header-cell *matHeaderCellDef> Year </th>
+      <td mat-cell *matCellDef="let element"> {{element.year}} </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  
+  <span class="spanheader">
+    <mat-icon aria-hidden="false" aria-label="Example home icon">perm_phone_msg</mat-icon>
+    Contact
+  </span>
 </div>
