--- a/src/app/Views/navbar/navbar.component.html
+++ b/src/app/Views/navbar/navbar.component.html
@@ -1,7 +1,6 @@
 <mat-toolbar class="navbar">
   <button mat-button>Home</button>
   <span class="example-spacer"></span>
-  <button mat-button>About</button>
-  <button mat-button>Contact</button>
-  <button mat-button>Social</button>
+  <button mat-button (click)="OpenAbout()">About</button>
+  <button mat-button (click)="OpenContact()">Contact</button>
 </mat-toolbar>
