--- a/src/app/Views/navbar/navbar.component.scss
+++ b/src/app/Views/navbar/navbar.component.scss
@@ -8,3 +8,9 @@ button {
   color: white;
   border: 1rem;
 }
+::ng-deep .mat-dialog-container {
+  background-color: #000000;
+  background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
