--- a/src/app/Views/contacts/contacts.component.html
+++ b/src/app/Views/contacts/contacts.component.html
@@ -1,12 +1,12 @@
 <mat-nav-list>
   <a mat-list-item>
-    <span mat-line>Name</span>
-    <span mat-line>Mriganka Shekhar Saha</span>
+    <span mat-line class="listlevel">Name</span>
+    <span mat-line class="listdata">Mriganka Shekhar Saha</span>
   </a>
 
   <a mat-list-item>
-    <span mat-line>Email</span>
-    <span mat-line>mrigankasaha2@gmail.com</span>
+    <span mat-line class="listlevel">Email</span>
+    <span mat-line class="listdata">mrigankasaha2@gmail.com</span>
   </a>
 
   <a
@@ -14,7 +14,9 @@
     href="https://www.linkedin.com/in/mriganka-saha-ba16ba13b/"
     target="_blank"
   >
-    <span mat-line>LinkedIn</span>
-    <span mat-line>https://www.linkedin.com/in/mriganka-saha-ba16ba13b/</span>
+    <span mat-line class="listlevel">LinkedIn</span>
+    <span mat-line class="listdata"
+      >https://www.linkedin.com/in/mriganka-saha-ba16ba13b/</span
+    >
   </a>
 </mat-nav-list>
