--- a/src/app/Views/home/home.component.scss
+++ b/src/app/Views/home/home.component.scss
@@ -54,6 +54,28 @@ table {
   place-items: center;
   margin-top: 30px;
 }
+.main {
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+::ng-deep .mat-bottom-sheet-container {
+  background-color: #000000;
+  background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+.dividercolour {
+  background-color: rgba(202, 193, 193, 0.26);
+}
 
 @media only screen and (max-width: 600px) {
   .cardgroup {
