Implementing sass variables and mixin

--- a/src/app/Views/contacts/contacts.component.scss
+++ b/src/app/Views/contacts/contacts.component.scss
@@ -1,6 +1,7 @@
+@import "../../../styles.scss";
 .listlevel {
-  color: rgb(255, 255, 255);
+  color: $PrimaryTextColor;
 }
 .listdata {
-  color: rgb(134, 134, 134);
+  color: $SecondaryTextColor;
 }
