--- a/src/app/Views/navbar/navbar.component.scss
+++ b/src/app/Views/navbar/navbar.component.scss
@@ -1,3 +1,6 @@
+@import "../../../styles.scss";
+$Theme: dark;
+
 .example-spacer {
   flex: 1 1 auto;
 }
@@ -5,12 +8,9 @@
   background: transparent;
 }
 button {
-  color: white;
+  color: $PrimaryTextColor;
   border: 1rem;
 }
 ::ng-deep .mat-dialog-container {
-  background-color: #000000;
-  background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  @include backgroundgradient($Theme);
 }
